# ostomachion

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  approx_sqrt.cpp  approx_sqrt_test.cpp  arbitrary_precision.hpp  callgrind.out.28046  callgrind.out.28383  circular  circular_ll.cpp  cmake_install.cmake  find_primes.cpp  fracroot.cpp  fracroot.hpp  fracroot_test.cpp  fraction.cpp  fraction.hpp  frame_dfs.cpp  interactive_state  interactive_state.cpp  interactive_visualizer.ipynb  intersection_algorithms.cpp  intersection_algorithms_test.cpp  list  main_number.cpp  matplotlib_test.cpp  numbers  numbers.cpp  numbers.hpp  numbers_test.cpp  osto  ostomachion.cpp  points  points_vectors.cpp  points_vectors.hpp  points_vectors_test  points_vectors_test.cpp  polygon  polygon.cpp  (+14 more)
.ipynb_checkpoints/: interactive_visualizer-checkpoint.ipynb  test_interactive-checkpoint.ipynb  test_ll_merge-checkpoint.ipynb  visualizer-checkpoint.ipynb
documents/: Ostomachion.md  Untitled.ipynb  c2b_format  install.js  ll.ipynb  ostomachion_images.ipynb  out_ostomachion.txt  out_ostomachion_unique.txt  package-lock.json
documents/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  ll-checkpoint.ipynb  ostomachion_images-checkpoint.ipynb
documents/chapter_1/: ostomachion_c1.md
documents/chapter_2/: ostomachion_c2.md
documents/chapter_3/: ostomachion_c3.md
documents/chapter_4/: ostomachion_c4.md
documents/chapter_5/: ostomachion_c5.md
documents/chapter_6/: ostomachion_c6.md
explorations/: CMakeCache.txt  CMakeLists.txt  Makefile  approx_sqrt.cpp  approx_sqrt_test.cpp  catch2_test.cpp  cmake_install.cmake  gmp_cpp_test.cpp  gmp_test.cpp  ostomachion.ipynb  sqrt  test  test_interactive.ipynb  test_ll_merge.ipynb
explorations/explore2/blah/: Blah.cpp  CMakeLists.txt
explorations/explore_libs/include/: functions.hpp
explorations/explore_libs/src/: instantiator.cpp
explore2/: CMakeLists.txt  main.cpp
explore2/blah/include/: Blah.hpp
explore_libs/: CMakeLists.txt  a.out  main.cpp  readme.txt
explore_libs/src/: functions.cpp
intrinsics/: intrinsics.cpp  intrinsics_poly.cpp  out
numeric/: CMakeLists.txt  approx_sqrt.cpp  customFloat_test.cpp  fraction.cpp  fraction.hpp  instantiator.cpp  main.cpp  out  points_vectors.cpp  points_vectors.hpp
numeric/include/: approx_sqrt.cpp  customFloat.cpp  fracroot.cpp  fracroot.hpp  fraction.cpp  fraction.hpp  numbers.cpp  numbers.hpp  points_vectors.cpp  points_vectors.hpp  shoelace.hpp
numeric/src/: fracroot.cpp  instantiator.cpp  numbers.cpp  points_vectors.cpp
numeric/tests/: CMakeLists.txt  angle_test.cpp  approx_sqrt_test.cpp  frac_test.cpp  fracroot_test.cpp  numbers_test.cpp  points_vectors_test.cpp
old/solver/: CMakeLists.txt
old/solver/src/: graphics.cpp
old/state/include/: grid.cpp  group.cpp  intersection_algorithms.cpp  ostomachion.cpp  polygon.cpp
old/state/tests/: TemplateDispatchTable.cpp  Untitled.ipynb  dispatch.cpp  intersection_algorithms_benchmark.cpp  intersection_algorithms_test.cpp  polygon_test.cpp  temp_test.cpp  temp_test2.cpp  temp_test4.cpp  temp_test5.cpp  test_blueprint.cpp  test_blueprint2.cpp  test_parallel.cpp
old/state/tests/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
polygon/include/: BarePoly.cpp  ContigPoly.cpp  LLPoly.cpp  intersection_algorithms.cpp  polygon.cpp  vertex.cpp
polygon/tests/: CMakeLists.txt  intersection_algorithms_benchmark.cpp  intersection_algorithms_test.cpp  polygon_test.cpp  test
profiling/: analytics.hpp
remove_tests/: CMakeLists.txt  cmake_install.cmake
solver/: CMakeLists.txt  out  out.txt  out_ostomachion3.txt  out_ostomachion_unique3.txt
solver/src/: debug2.cpp  debug3.cpp  degub.cpp  example.txt  graphics.cpp  interactive_state.cpp  main.cpp  solver.cpp  solver_parallel.cpp  solver_parallel2.cpp  state_from_history.cpp
solver/tools/: visualizer_engine.py
state/include/: ArchiveQueue.cpp  container.hpp  group.cpp  intersection_algorithms.cpp  memory_pool.hpp  old_state-delete.cpp  ostomachion.cpp  polygon.cpp  polygon.hpp  polyset.cpp  settings.hpp  state.cpp  state.hpp  temp_test2.cpp  wat.cpp
state/src/: state.cpp
state/tests/: CMakeLists.txt  intersection_algorithms_benchmark.cpp  intersection_algorithms_test.cpp  state_test.cpp  temp_test.cpp  temp_test1.cpp  temp_test6.cpp  temp_test7.cpp  test_blueprint.cpp
tests/: CMakeCache.txt  Makefile  numbers_test.cpp
visualization_tools/: interactive_visualizer.py  visualizer.py  visualizer2.py
visualizer/: visualizer_engine.py
zold/: ArchiveQueue.cpp  interactive_state.cpp  tests.cpp  visualizer_engine.py
