cmake_minimum_required(VERSION 3.10)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra")
#set(CMAKE_CXX_FLAGS "-O0 -g -Wall -Wextra -fno-inline")

project(Main1 VERSION 1.0)

add_executable(state_from_history src/state_from_history.cpp)
target_link_libraries(state_from_history PUBLIC gmp gmpxx pthread)
target_include_directories(state_from_history PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../numeric/include)
target_include_directories(state_from_history PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../polygon/include)
target_include_directories(state_from_history PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../state/include)
target_include_directories(state_from_history PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../solver/include)
target_include_directories(state_from_history PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../profiling)

add_executable(interactive src/interactive_state.cpp)
target_link_libraries(interactive PUBLIC gmp gmpxx pthread)
target_include_directories(interactive PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../numeric/include)
target_include_directories(interactive PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../polygon/include)
target_include_directories(interactive PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../state/include)
target_include_directories(interactive PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../solver/include)
target_include_directories(interactive PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../profiling)

add_executable(main src/main.cpp)
target_link_libraries(main PUBLIC gmp gmpxx pthread)
target_include_directories(main PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../numeric/include)
target_include_directories(main PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../polygon/include)
target_include_directories(main PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../state/include)
target_include_directories(main PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../solver/include)
target_include_directories(main PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../profiling)

# install(TARGETS interactive DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/bin)
# install(TARGETS solver DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/bin)
